# expenditure_analyse

./: 404.html  bank_statement_sample.csv  example.py  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: LLD.md  PRD.md
src/expenditure_analyse/: analyzer.py  categorizer.py  data_loader.py  main.py  parser.py  question_answering.py  utils.py
src/expenditure_analyse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_core.py  test_csv_parser.py  test_expense_analyzer.py  test_expense_classifier.py  test_llm_integrator.py
